<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nulo"></string>
    <string name="app_name">App Estudo Android</string>
    <string name="action_settings">Configuração</string>
    <string name="principal">Principal</string>
    <string name="msgOpcoes">Opções</string>
    <string name="msgOk">OK</string>
    <string name="msgAtencao">Atenção</string>
    <string name="msgSucesso">Sucesso</string>

    <!-- sqlite -->
	    <string name="sqlite">SQLite</string>
	    <string name="cadastrar">Cadastrar</string>
	    <string name="editar">Editar</string>
	    <string name="excluir">Excluir</string>
	    <string name="verDetalhes">Ver detalhes</string>
	    <string name="listar">Listar Todos</string>
	    <string name="campoNome">Nome</string>
	    <string name="campoMarca">Marca</string>
	    <string name="campoAno">Ano</string>
	    <string name="botaoSalvar">Salvar</string>
	
	    <!-- msgs -->
		    <string name="msgCamposObrigatorios">Todos os campos são obrigatorios</string>
		    <string name="msgRegistroSalvo">Registro salvo com sucesso.</string>
		    <string name="msgRegistroAlterado">Registro alterado com sucesso.</string>
		    
	<!-- storage -->
		<string name="storage">Storage</string>
		<string name="campoNomeArquivo">Nome do arquivo</string>
		<string name="campoConteudoArquivo">Conteudo do arquivo</string>
		<string name="botaoSalvarArquivo">Gerar arquivo</string>
		<string name="botaoListarArquivo">Listar arquivos</string>
		<string name="listarArquivos">Listar arquivos</string>
		
	<!-- jpa -->
		<string name="jpaAndroid">JPA Android</string>
		
	<!-- aerogear -->
		<string name="aerogear">Aerogear</string>
		
	<!-- droid persistence -->
		<string name="droidPersistence">Droid Persistence</string>
		
	<!-- jas db -->
		<string name="jasDb">jasDB</string>

</resources>