<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/main_vertical_margin"
    android:paddingLeft="@dimen/main_horizontal_margin"
    android:paddingRight="@dimen/main_horizontal_margin"
    android:paddingTop="@dimen/main_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnSqlite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlite" />
    
    <Button
        android:id="@+id/btnStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/storage" />
    
    <Button
        android:id="@+id/btnAeroGear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aerogear" />
    
    <Button
        android:id="@+id/btnJpaAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jpaAndroid" />
    
    <Button
        android:id="@+id/btnDroidPersistence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/droidPersistence" />
    
    <Button
        android:id="@+id/btnJasDb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jasDb" />

</LinearLayout>